Fixed showing latency data when not available

--- a/kafka-testers/kafka-tester-analyzer/src/main/resources/report.html.vm
+++ b/kafka-testers/kafka-tester-analyzer/src/main/resources/report.html.vm
@@ -165,7 +165,7 @@
             <img src="$rateFile" alt=""/>
         </div>
 
-#if ($latencyFile != '')
+#if ($latencyFile && $latencyFile != '')
         <div>
             <table>
                 <tr>
