Simplified report generation

--- a/kafka-testers/kafka-tester-analyzer/src/main/resources/report.html.vm
+++ b/kafka-testers/kafka-tester-analyzer/src/main/resources/report.html.vm
@@ -162,7 +162,7 @@
         </div>
 
         <div>
-            <img src="$rateFile" alt=""/>
+            <img src="rate.png" alt=""/>
         </div>
 
 #if ($latencyFile && $latencyFile != '')
